--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "illuminate/support": "5.1.* || 5.2.* || 5.3.*",
+        "graham-campbell/manager": "^2.4",
         "stripe/stripe-php": "^4.1"
     },
     "require-dev": {
