--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,15 @@
         "role": "Developer"
     }],
     "require": {
-        "php": "^5.6 || ^7.0",
-        "illuminate/support": "5.1.* || 5.2.* || 5.3.*",
+        "php": "^5.6.4 || ^7.0",
+        "illuminate/support": "5.2.* || 5.3.*",
         "graham-campbell/manager": "^2.4",
         "stripe/stripe-php": "^4.1"
     },
     "require-dev": {
-        "graham-campbell/testbench": "^3.1",
-        "mockery/mockery": "^0.9.4",
-        "phpunit/phpunit": "^5.0",
-        "scrutinizer/ocular": "~1.1",
-        "squizlabs/php_codesniffer": "~2.3"
+        "graham-campbell/testbench": "^3.2",
+        "mockery/mockery": "^0.9.5",
+        "phpunit/phpunit": "^5.6"
     },
     "autoload": {
         "psr-4": {
