--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,11 @@
     "authors": [{
         "name": "Brian Faust",
         "email": "hello@brianfaust.de",
-        "homepage": "https://brianfaust.de",
-        "role": "Developer"
+        "homepage": "https://brianfaust.de"
     }],
     "require": {
-        "php": "^5.6.4 || ^7.0",
-        "illuminate/support": "5.2.* || 5.3.*",
+        "php": "^7.0",
+        "illuminate/support": "5.3.*",
         "graham-campbell/manager": "^2.4",
         "stripe/stripe-php": "^4.1"
     },
