--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "5.3.*",
+        "illuminate/support": "5.3.* || 5.4.*",
         "graham-campbell/manager": "^2.4",
         "stripe/stripe-php": "^4.1"
     },
