--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "^7.1",
         "graham-campbell/manager": "^3.0",
-        "illuminate/support": "5.5.* || 5.6.*",
+        "illuminate/support": "5.5.* || 5.6.* || 5.7.*",
         "stripe/stripe-php": "^5.9"
     },
     "require-dev": {
