--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,24 @@
 {
     "name": "artisanry/stripe",
     "description": "A Stripe bridge for Laravel",
-    "keywords": ["laravel", "framework", "Laravel-Stripe", "Laravel Stripe"],
+    "keywords": [
+        "laravel",
+        "framework",
+        "Laravel-Stripe",
+        "Laravel Stripe"
+    ],
     "license": "MIT",
-    "authors": [{
-        "name": "Brian Faust",
-        "email": "hello@basecode.sh",
-        "homepage": "https://basecode.sh"
-    }],
+    "authors": [
+        {
+            "name": "Brian Faust",
+            "email": "hello@basecode.sh",
+            "homepage": "https://basecode.sh"
+        }
+    ],
     "require": {
-        "php": "^7.1",
+        "php": "^7.2",
         "graham-campbell/manager": "^3.0",
-        "illuminate/support": "^5.6",
+        "illuminate/support": "^5.8",
         "stripe/stripe-php": "^5.9"
     },
     "require-dev": {
