--- a/composer.json
+++ b/composer.json
@@ -8,17 +8,15 @@
         "Laravel Stripe"
     ],
     "license": "MPL-2.0",
-    "authors": [
-        {
-            "name": "Brian Faust",
-            "email": "hello@basecode.sh",
-            "homepage": "https://basecode.sh"
-        }
-    ],
+    "authors": [{
+        "name": "Brian Faust",
+        "email": "hello@basecode.sh",
+        "homepage": "https://basecode.sh"
+    }],
     "require": {
         "php": "^7.2",
         "graham-campbell/manager": "^3.0",
-        "illuminate/support": "^5.8",
+        "illuminate/support": "^5.8|^6.0",
         "stripe/stripe-php": "^5.9"
     },
     "require-dev": {
